# product-landing-page

./: Pipfile  pyproject.toml  requirements.txt  tee
.github/workflows/: semgrep.yml
alexa/: about.html  contact.html  core.html  features.html  index.html  specifications.html  style.css
